--- a/Proyecto_1_Diseno/templates/_base.html
+++ b/Proyecto_1_Diseno/templates/_base.html
@@ -108,22 +108,7 @@
             class="sidebar-link {% if 'control' in request.path %}active{% endif %}"
             href="{{ get_base_path() }}/control/"
           >
-            <span class="link-icon">
-              <svg
-                width="18"
-                height="18"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
-                <path d="M2 17l10 5 10-5"></path>
-                <path d="M2 12l10 5 10-5"></path>
-              </svg>
-            </span>
+            <span class="link-icon">🗼</span>
             Torre de Control
           </a>
         </div>
