Names correction historical and control

--- a/Proyecto_1_Diseno/templates/control.html
+++ b/Proyecto_1_Diseno/templates/control.html
@@ -64,7 +64,7 @@ main_content %}
           ✈️ Enviar Destino
         </button>
         <button class="btn-cancel" id="btnCancelDestination">
-          ✖️ Cancelar
+          ✅ Finalizar ruta
         </button>
       </div>
     </div>
