--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -375,7 +375,7 @@ main_content %}
   style="display: none"
 >
   <div class="route-panel-header">
-    <h3>Control de Ruta</h3>
+    <h3>Generación de ruta</h3>
     <button class="btn-toggle-panel" id="btnTogglePanel" title="Minimizar/Maximizar">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="chevron-icon">
         <polyline points="18 15 12 9 6 15"></polyline>
