Added map withour buttons, again

--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -29,6 +29,11 @@ main_content %}
 
 <h2>Ubicación en Tiempo Real</h2>
 
+<div class="map-container">
+  <div id="map"></div>
+  </div>
+</div>
+
 <div class="coordinates">
   <h2>Posición Actual</h2>
   <div class="field">
